# oekakibbsstyledouga

./: .gitignore  LICENSE  index.html  log.txt  package-lock.json  package.json  project.schema.json  specification.md  technology-selection.md
.github/: headless-export.json
.github/workflows/: headless-export.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src/infra/tauri-api/: assets.ts  client.ts  platform.ts  types.ts
src/state/editor-store/: types.ts  useEditorStore.ts
src/ui/app-shell/: App.tsx  ProjectPanel.tsx
src/ui/canvas/: CanvasStage.tsx
src/ui/editor/: EditorShell.tsx
src/ui/timeline/: Timeline.tsx
