[package]
name = "oekakibbsstyledouga"
version = "0.1.0"
edition = "2021"
default-run = "oekakibbsstyledouga"

[build-dependencies]
tauri-build = { version = "=2.0.0", features = [] }

[dependencies]
image = "=0.25.5"
reqwest = { version = "=0.12.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "=1.0.214", features = ["derive"] }
serde_json = "=1.0.132"
tauri = { version = "=2.0.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "=2.0.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
